--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+######################### GITIGNORE PARA TEX #############################
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -178,3 +180,38 @@ TSWLatexianTemp*
 
 # KBibTeX
 *~[0-9]*
+
+######################### GITIGNORE PARA CPP #############################
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
